@@ -1,3 +1,6 @@
 # Pathfinding-Simulator
  
-This project is a GUI that provides visualizations for the path finding algorithms: Djkstra, A*, Breadth First Search, and Depth First Search.
+This project is a GUI application created using JavaFX that provides visualizations for the path finding algorithms: Djkstra, A*, Breadth First Search, and Depth First Search.
+
+## Running the program
+To run the program, run the .bat or .sh file or run the following command on the command prompt: 'java --module-path "\<path to this folder\>\javafx\lib" --add-modules javafx.controls,javafx.fxml -jar PathfindingSimulator.jar'.
